...
}

extension UIAlertController{
    
    func showErrorAlert(message:String)-> UIAlertController{
        
        let alert = UIAlertController(title: "Error", message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        
        
        return alert
    }
    
    func showWarningAlert(message:String)-> UIAlertController{
...
